--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-6">
-                <p class="javers-font-color-blue lead">JaVers is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License Version 2.0</a></p>
+            <div class="col-md-6 ">
+                <p class="javers-font-color-blue">JaVers is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License Version 2.0</a></p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-md-6 ">
                 <ul class="list-inline banner-social-buttons">
                     <li><a href="http://mvnrepository.com/artifact/org.javers/javers-core" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> <span class="network-name">Maven</span></a>
                     </li>
