--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -1,4 +1,4 @@
-<nav class="javers-navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="javers-navbar navbar-inverse" role="navigation">
 
     <div class="container">
         <div class="navbar-header">
