--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -8,18 +8,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a  class="navbar-brand" href="/index.html#home">Javers</a>
+            <a  class="navbar-brand" href="/">Javers</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/index.html#features">Features</a></li>
-                <li><a href="documentation/docs.html">Documentation</a></li>
-                <li><a href="javadoc_0.8.0/index.html">Javadoc</a></li>
-                <li><a href="/index.html#demo-app">Demo app</a></li>
-                <li><a href="/index.html#story">Story</a></li>
-                <li><a href="/index.html#team">Team</a>
+                <li><a href="/#features">Features</a></li>
+                <li><a href="/documentation">Documentation</a></li>
+                <li><a href="/javadoc_0.8.0/index.html">Javadoc</a></li>
+                <li><a href="/#demo-app">Demo app</a></li>
+                <li><a href="/#story">Story</a></li>
+                <li><a href="/#team">Team</a>
                 </li>
             </ul>
         </div>
