--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,22 +1,21 @@
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
 
-    <title>{{ page.title }}</title>
+<title>{{ page.title }}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/css/javers.css" rel="stylesheet">
-    <link href="/css/bootstrap.css" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link href="/css/javers.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- github style syntax highlight -->
-    <link href="/css/github_pygments.css" rel="stylesheet">
+<!-- github style syntax highlight -->
+<link href="/css/github_pygments.css" rel="stylesheet">
 
-    <!-- Custom Google Web Font -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<!-- Custom Google Web Font -->
+<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
+      rel='stylesheet' type='text/css'>
 
-    <!-- Add custom CSS here -->
-    <link href="/css/landing-page.css" rel="stylesheet">
-</head>
+<!-- Add custom CSS here -->
+<link href="/css/landing-page.css" rel="stylesheet">
