--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -8,9 +8,11 @@
 <body data-spy="scroll" data-target=".javers-navbar">
 
 {% include menus.html %}
-
-{% include content.html %}
-
+<section id="documentation" class="container-fluid">
+    <div class="container">
+        {% include content.html %}
+    </div>
+</section>
 {% include footer.html %}
 </body>
 </html>
