--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -1,18 +1,19 @@
 <div class="docs-sidebar hidden-print hidden-xs hidden-sm affix" role="complementary">
     <ul class="nav docs-sidenav">
         <li>
-            <a href="#gettingstarted">Getting Started</a>
+            <a href="/documentation/introduction">Introduction</a>
             <ul class="nav">
-                <li><a href="#whatisjavers">What is JaVers</a></li>
-                <li><a href="#featuresoverview">Features overview</a></li>
-                <li><a href="#quickstartguide">Quick-start guide</a></li>
+                <li><a href="/documentation/introduction/#what-is-javers">What is JaVers</a></li>
+                <li><a href="/documentation/introduction/#story">Story</a></li>
+                <li><a href="/documentation/introduction/#basic-facts-about-javers">Basic facts about JaVers</a></li>
             </ul>
         </li>
         <li>
-            <a href="#userguide">User Guide</a>
+            <a href="/documentation/features-overview">Features Overview</a>
             <ul class="nav">
-                <li><a href="#configuration">Configuration</a></li>
-                <li><a href="#modelmapping">Model Mapping</a></li>
+                <li><a href="/documentation/features-overview#object-diff">Object diff</a></li>
+                <li><a href="/documentation/features-overview#javers-repository">Javers Repository</a></li>
+                <li><a href="/documentation/features-overview#json-serialization">JSON Serialization</a></li>
             </ul>
         </li>
     </ul>
