--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -1,11 +1,11 @@
 <div class="docs-sidebar hidden-print hidden-xs hidden-sm affix" role="complementary">
     <ul class="nav docs-sidenav">
         <li>
-            <a href="/documentation/introduction">Introduction</a>
+            <a href="/documentation">Introduction</a>
             <ul class="nav">
-                <li><a href="/documentation/introduction/#what-is-javers">What is JaVers</a></li>
-                <li><a href="/documentation/introduction/#story">Story</a></li>
-                <li><a href="/documentation/introduction/#basic-facts-about-javers">Basic facts about JaVers</a></li>
+                <li><a href="/documentation/#what-is-javers">What is JaVers</a></li>
+                <li><a href="/documentation/#story">Story</a></li>
+                <li><a href="/documentation/#basic-facts-about-javers">Basic facts about JaVers</a></li>
             </ul>
         </li>
         <li>
