--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/documentation/features-overview">Features</a></li>
-                <li><a href="/documentation/introduction">Documentation</a></li>
+                <li><a href="/documentation">Documentation</a></li>
                 <li><a href="/javadoc_0.8.0/index.html">Javadoc</a></li>
                 <li><a href="/#demo-app">Demo app</a></li>
                 <li><a href="/#team">Team</a>
