--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -16,5 +16,24 @@
                 <li><a href="/documentation/features-overview#json-serialization">JSON Serialization</a></li>
             </ul>
         </li>
+        <li>
+            <a href="/documentation/getting-started">Getting Started</a>
+            <ul class="nav">
+                <li><a href="/documentation/getting-started#getting-started">Get JaVers</a></li>
+                <li><a href="/documentation/getting-started#create-javers-instance">Create JaVers instance</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="/documentation/examples">Examples</a>
+            <ul class="nav">
+                <li><a href="/documentation/getting-started#to-do">//TODO</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="/documentation/configuration">Configuration</a>
+            <ul class="nav">
+                <li><a href="/documentation/configurationd#getting-started">...</a></li>
+            </ul>
+        </li>
     </ul>
 </div>
