--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -32,7 +32,8 @@
         <li>
             <a href="/documentation/configuration">Configuration</a>
             <ul class="nav">
-                <li><a href="/documentation/configurationd#getting-started">...</a></li>
+                <li><a href="/documentation/configuration#domain-model-mapping">Domain model mapping</a></li>
+                <li><a href="/documentation/configuration#repository-setup">Repository setup</a></li>
             </ul>
         </li>
     </ul>
