--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -26,7 +26,11 @@
         <li>
             <a href="/documentation/examples">Examples</a>
             <ul class="nav">
-                <li><a href="/documentation/getting-started#to-do">//TODO</a></li>
+                <li><a href="/documentation/examples#compare-entities">Compare Entities</a></li>
+                <li><a href="/documentation/examples#compare-valueobjects">Compare Value Objects</a></li>
+                <li><a href="/documentation/examples#commit-changes">Commit changes</a></li>
+                <li><a href="/documentation/examples#read-snapshots-history">Read snapshots history</a></li>
+                <li><a href="/documentation/examples#read-changes-history">Read changes history</a></li>
             </ul>
         </li>
         <li>
