new doc - javers internals

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -40,5 +40,11 @@
                 <li><a href="/documentation/configuration#repository-setup">Repository setup</a></li>
             </ul>
         </li>
+        <li>
+            <a href="/documentation/javers-internals">JaVers Internals</a>
+            <ul class="nav">
+                <li><a href="/documentation/javers-internals#type-mapper">TypeMapper</a></li>
+            </ul>
+        </li>
     </ul>
 </div>
