/documentation JaversType refinement

--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -13,7 +13,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/documentation/features-overview">Features</a></li>
                 <li><a href="/documentation">Documentation</a></li>
-                <li><a href="/javadoc_0.8.0/index.html">Javadoc</a></li>
+                <li><a href="{{ site.javadoc_url }}index.html">Javadoc</a></li>
                 <li><a href="/#demo-app">Demo app</a></li>
                 <li><a href="/#team">Team</a>
                 </li>
