--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -1,4 +1,4 @@
-<div class="docs-sidebar hidden-print hidden-xs hidden-sm affix" role="complementary">
+<div class="docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
     <ul class="nav docs-sidenav">
         <li>
             <a href="/documentation">Introduction</a>
