mvn artifact url fixing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,14 @@
 <footer class="container">
     <div class="row">
-        <div class="col-md-6 ">
-            <p class="javers-font-color-blue">JaVers is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache
-                License Version 2.0</a></p>
+        <div class="col-md-8 ">
+            <p class="javers-font-color-blue">You found a bug? Documentation is unclear?<br/>
+            Report an issue to our <a href="https://github.com/javers/javers/issues/">github issues</a>
+            </p>
         </div>
-        <div class="col-md-6 ">
+        <div class="col-md-4 ">
             <ul class="list-inline banner-social-buttons">
                 <li>
-                    <a href="http://mvnrepository.com/artifact/org.javers/javers-core" title="Javers Maven Repository"
+                    <a href="http://search.maven.org/#search|ga|1|javers-core" title="Javers Maven Repository"
                        class="btn btn-default btn-lg">
                         <i class="fa fa-download fa-fw"></i>&nbsp;<span class="network-name">Maven</span>
                     </a>
