--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -24,13 +24,18 @@
             </ul>
         </li>
         <li>
-            <a href="/documentation/examples">Examples</a>
+            <a href="/documentation/diff-examples">Examples - Diff</a>
             <ul class="nav">
-                <li><a href="/documentation/examples#compare-entities">Compare Entities</a></li>
-                <li><a href="/documentation/examples#compare-valueobjects">Compare Value Objects</a></li>
-                <li><a href="/documentation/examples#commit-changes">Commit changes</a></li>
-                <li><a href="/documentation/examples#read-snapshots-history">Read snapshots history</a></li>
-                <li><a href="/documentation/examples#read-changes-history">Read changes history</a></li>
+                <li><a href="/documentation/diff-examples#compare-entities">Compare Entities</a></li>
+                <li><a href="/documentation/diff-examples#compare-valueobjects">Compare Value Objects</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="/documentation/repository-examples">Examples - Repository</a>
+            <ul class="nav">
+                <li><a href="/documentation/diff-examples#commit-changes">Commit changes</a></li>
+                <li><a href="/documentation/diff-examples#read-snapshots-history">Read snapshots history</a></li>
+                <li><a href="/documentation/diff-examples#read-changes-history">Read changes history</a></li>
             </ul>
         </li>
         <li>
