--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -28,6 +28,7 @@
             <ul class="nav">
                 <li><a href="/documentation/diff-examples#compare-entities">Compare Entities</a></li>
                 <li><a href="/documentation/diff-examples#compare-valueobjects">Compare Value Objects</a></li>
+                <li><a href="/documentation/diff-examples#compare-graphs">Compare graphs</a></li>
             </ul>
         </li>
         <li>
