mapping-configuration refinement, Morphia case

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -43,6 +43,7 @@
             <a href="/documentation/configuration">Configuration</a>
             <ul class="nav">
                 <li><a href="/documentation/configuration#domain-model-mapping">Domain model mapping</a></li>
+                <li><a href="/documentation/configuration#mapping-configuration">Mapping configuration</a></li>
                 <li><a href="/documentation/configuration#repository-setup">Repository setup</a></li>
             </ul>
         </li>
