more documentation - entity-id-property

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -43,7 +43,11 @@
             <a href="/documentation/configuration">Configuration</a>
             <ul class="nav">
                 <li><a href="/documentation/configuration#domain-model-mapping">Domain model mapping</a></li>
-                <li><a href="/documentation/configuration#mapping-configuration">Mapping configuration</a></li>
+                <li><a href="/documentation/configuration#mapping-configuration">Mapping configuration</a>
+                    <li><a href="/documentation/configuration#supported-annotations">&nbsp; &nbsp; Supported annotations</a>
+                    <li><a href="/documentation/configuration#entity-id-property">&nbsp; &nbsp; Entity Id property</a>
+                    <li><a href="/documentation/configuration#property-mapping-style">&nbsp; &nbsp; Property mapping style</a>
+                </li>
                 <li><a href="/documentation/configuration#repository-setup">Repository setup</a></li>
             </ul>
         </li>
