--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -47,8 +47,9 @@
                     <li><a href="/documentation/configuration#supported-annotations">&nbsp; &nbsp; Supported annotations</a>
                     <li><a href="/documentation/configuration#entity-id-property">&nbsp; &nbsp; Entity Id property</a>
                     <li><a href="/documentation/configuration#property-mapping-style">&nbsp; &nbsp; Property mapping style</a>
+                    <li><a href="/documentation/configuration#custom-json-serialization">&nbsp; &nbsp; Custom JSON serialization</a>
                 </li>
-                <li><a href="/documentation/configuration#repository-setup">Repository setup</a></li>
+                <li><a href="/documentation/configuration#repository-setup">JaversRepository setup</a></li>
             </ul>
         </li>
         <li>
