type adapters finished

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -34,9 +34,10 @@
         <li>
             <a href="/documentation/repository-examples">Examples - Repository</a>
             <ul class="nav">
-                <li><a href="/documentation/diff-examples#commit-changes">Commit changes</a></li>
-                <li><a href="/documentation/diff-examples#read-snapshots-history">Read snapshots history</a></li>
-                <li><a href="/documentation/diff-examples#read-changes-history">Read changes history</a></li>
+                <li><a href="/documentation/repository-examples#commit-changes">Commit changes</a></li>
+                <li><a href="/documentation/repository-examples#read-snapshots-history">Read snapshots history</a></li>
+                <li><a href="/documentation/repository-examples#read-changes-history">Read changes history</a></li>
+                <li><a href="/documentation/repository-examples#json-type-adapter">JSON TypeAdapter for ObjectId</a></li>
             </ul>
         </li>
         <li>
