better documentation typesetting

--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -19,12 +19,12 @@
         <li>
             <a href="/documentation/getting-started">Getting Started</a>
             <ul class="nav">
-                <li><a href="/documentation/getting-started#getting-started">Get JaVers</a></li>
+                <li><a href="/documentation/getting-started#get-javers">Get JaVers</a></li>
                 <li><a href="/documentation/getting-started#create-javers-instance">Create JaVers instance</a></li>
             </ul>
         </li>
         <li>
-            <a href="/documentation/diff-examples">Examples - Diff</a>
+            <a href="/documentation/diff-examples">Examples &mdash; Diff</a>
             <ul class="nav">
                 <li><a href="/documentation/diff-examples#compare-entities">Compare Entities</a></li>
                 <li><a href="/documentation/diff-examples#compare-valueobjects">Compare Value Objects</a></li>
@@ -32,7 +32,7 @@
             </ul>
         </li>
         <li>
-            <a href="/documentation/repository-examples">Examples - Repository</a>
+            <a href="/documentation/repository-examples">Examples &mdash; Repository</a>
             <ul class="nav">
                 <li><a href="/documentation/repository-examples#commit-changes">Commit changes</a></li>
                 <li><a href="/documentation/repository-examples#read-snapshots-history">Read snapshots history</a></li>
