--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -11,10 +11,10 @@
 {% include menus.html %}
 <section id="documentation" class="container">
     <div class="row">
-        <div class="col-md-9 well">
+        <div class="col-md-8 javers-well">
             {% include content.html %}
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             {% include docs-sidebar.html %}
         </div>
     </div>
