--- a/css/documentation.css
+++ b/css/documentation.css
@@ -1,3 +1,13 @@
+
+.javers-well {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
 #documentation {
     margin-top: 50px;
 }
@@ -9,9 +19,18 @@
 .docs-sidebar .nav > li > a {
     display: block;
     padding: 10px 15px;
-    font-size: 22px;
-    font-weight: 500;
-    color: #333;
+    font-size: 26px;
+    font-weight: 300;
+    color: #111;
+}
+
+.docs-sidebar .nav .nav > li > a {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 30px;
+    font-size: 15px;
+    font-weight: 300;
+    color: #666;
 }
 
 .docs-sidebar .nav > li > a:hover,
@@ -30,16 +49,6 @@
     color: #3d7ac6;
     background-color: transparent;
     border-left: 2px solid #182a72;
-}
-
-.docs-sidebar .nav .nav > li > a {
-    padding-top: 1px;
-    padding-bottom: 1px;
-    padding-left: 30px;
-    font-size: 12px;
-    font-weight: 400;
-    color: #999;
-
 }
 
 .docs-sidebar .nav .nav > li > a:hover,
