new layout introduced

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,17 @@
-<footer class="container">
-    <div class="row">
-        <div class="col-md-8 ">
-            <p class="javers-font-color-blue">You found a bug? Documentation is unclear?<br/>
-            Report an issue to our <a href="https://github.com/javers/javers/issues/">github issues</a>
+<footer>
+    <div class="container">
+        <div class="row">
+            <p class="col-md-12">
+                <img alt="JaVers logo small" src="/img/logotype-small.png"/><br/>
+                JaVers is released under<br/>
+                <a title="Apache License Version 2.0" href="http://opensource.org/licenses/Apache-2.0">Apache License
+                    Version 2.0</a>
             </p>
-        </div>
-        <div class="col-md-4 ">
-            <ul class="list-inline banner-social-buttons">
-                <li>
-                    <a href="http://search.maven.org/#search|ga|1|javers-core" title="Javers Maven Repository"
-                       class="btn btn-default btn-lg">
-                        <i class="fa fa-download fa-fw"></i>&nbsp;<span class="network-name">Maven</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/javers/javers" title="Javers Github" class="btn btn-default btn-lg">
-                        <i class="fa fa-github fa-fw"></i>&nbsp;<span class="network-name">GitHub</span>
-                    </a>
-                </li>
-            </ul>
         </div>
     </div>
 </footer>
 
-<!-- JavaScript -->
-<script src="/js/jquery-1.10.2.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script>!function (d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
@@ -34,7 +21,8 @@
         js.src = p + "://platform.twitter.com/widgets.js";
         fjs.parentNode.insertBefore(js, fjs);
     }
-}(document, "script", "twitter-wjs");</script>
+}(document, "script", "twitter-wjs");
+</script>
 
 <!-- Google Analytics -->
 <script>
