--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<html>
 <head>
     {% include head.html %}
 </head>
-<body data-spy="scroll" data-target=".javers-navbar">
-
+<body>
 {% include menus.html %}
-
-{% include content.html %}
-
+{{ content }}
 {% include footer.html %}
 </body>
 </html>
