--- a/_includes/docs-sidebar.html
+++ b/_includes/docs-sidebar.html
@@ -1,64 +1,80 @@
-<div class="docs-sidebar hidden-print hidden-xs hidden-sm" role="complementary">
-    <ul class="nav docs-sidenav">
-        <li>
-            <a href="/documentation">Introduction</a>
-            <ul class="nav">
-                <li><a href="/documentation/#what-is-javers">What is JaVers</a></li>
-                <li><a href="/documentation/#story">Story</a></li>
-                <li><a href="/documentation/#basic-facts-about-javers">Basic facts about JaVers</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="/documentation/features-overview">Features Overview</a>
-            <ul class="nav">
-                <li><a href="/documentation/features-overview#object-diff">Object diff</a></li>
-                <li><a href="/documentation/features-overview#javers-repository">Javers Repository</a></li>
-                <li><a href="/documentation/features-overview#json-serialization">JSON Serialization</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="/documentation/getting-started">Getting Started</a>
-            <ul class="nav">
-                <li><a href="/documentation/getting-started#get-javers">Get JaVers</a></li>
-                <li><a href="/documentation/getting-started#create-javers-instance">Create JaVers instance</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="/documentation/diff-examples">Examples &mdash; Diff</a>
-            <ul class="nav">
-                <li><a href="/documentation/diff-examples#compare-entities">Compare Entities</a></li>
-                <li><a href="/documentation/diff-examples#compare-valueobjects">Compare Value Objects</a></li>
-                <li><a href="/documentation/diff-examples#compare-graphs">Compare graphs</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="/documentation/repository-examples">Examples &mdash; Repository</a>
-            <ul class="nav">
-                <li><a href="/documentation/repository-examples#commit-changes">Commit changes</a></li>
-                <li><a href="/documentation/repository-examples#read-snapshots-history">Read snapshots history</a></li>
-                <li><a href="/documentation/repository-examples#read-changes-history">Read changes history</a></li>
-                <li><a href="/documentation/repository-examples#json-type-adapter">JSON TypeAdapter for ObjectId</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="/documentation/configuration">Configuration</a>
-            <ul class="nav">
-                <li><a href="/documentation/configuration#domain-model-mapping">Domain model mapping</a></li>
-                <li><a href="/documentation/configuration#mapping-configuration">Mapping configuration</a>
-                    <li><a href="/documentation/configuration#supported-annotations">&nbsp; &nbsp; Supported annotations</a>
-                    <li><a href="/documentation/configuration#entity-id-property">&nbsp; &nbsp; Entity Id property</a>
-                    <li><a href="/documentation/configuration#property-mapping-style">&nbsp; &nbsp; Property mapping style</a>
-                </li>
-                <li><a href="/documentation/configuration#repository-setup">JaversRepository setup</a></li>
-                    <li><a href="/documentation/configuration#custom-json-serialization">&nbsp; &nbsp; Custom JSON serialization</a>
-                    <li><a href="/documentation/configuration#json-type-adapters">&nbsp; &nbsp; JSON TypeAdapters</a>
-            </ul>
-        </li>
-        <li>
-            <a href="/documentation/javers-internals">JaVers Internals</a>
-            <ul class="nav">
-                <li><a href="/documentation/javers-internals#type-mapper">TypeMapper</a></li>
-            </ul>
-        </li>
+<section>
+    <h2>
+        <a href="/documentation/">
+            Introduction
+        </a>
+    </h2>
+    <ul class="list-unstyled">
+        <li><a href="/documentation/#what-is-javers">What is JaVers</a></li>
+        <li><a href="/documentation/#story">Story</a></li>
+        <li><a href="/documentation/#basic-facts-about-javers">Basic facts about JaVers</a></li>
     </ul>
-</div>
+</section>
+
+<section>
+    <h2>
+        <a href="/documentation/features-overview">
+            Features overview
+        </a>
+    </h2>
+    <ul class="list-unstyled">
+        <li><a href="/documentation/features-overview#object-diff">Object diff</a></li>
+        <li><a href="/documentation/features-overview#javers-repository">Javers Repository</a></li>
+        <li><a href="/documentation/features-overview#json-serialization">JSON Serialization</a></li>
+    </ul>
+</section>
+
+<section>
+    <h2>
+        <a href="/documentation/getting-started">
+            Getting Started
+        </a>
+    </h2>
+    <ul class="list-unstyled">
+        <li><a href="/documentation/getting-started#get-javers">Get JaVers</a></li>
+        <li><a href="/documentation/getting-started#create-javers-instance">Create JaVers instance</a></li>
+    </ul>
+</section>
+
+<section>
+    <h2>
+        <a href="/documentation/repository-examples">
+            Examples &mdash; Diff
+        </a>
+    </h2>
+    <ul class="list-unstyled">
+        <li><a href="/documentation/repository-examples#commit-changes">Commit changes</a></li>
+        <li><a href="/documentation/repository-examples#read-snapshots-history">Read snapshots history</a></li>
+        <li><a href="/documentation/repository-examples#read-changes-history">Read changes history</a></li>
+        <li><a href="/documentation/repository-examples#json-type-adapter">JSON TypeAdapter for ObjectId</a></li>
+    </ul>
+</section>
+
+<section>
+    <h2>
+        <a href="/documentation/configuration">
+            Configuration
+        </a>
+    </h2>
+    <ul class="list-unstyled">
+        <li><a href="/documentation/configuration#domain-model-mapping">Domain model mapping</a></li>
+        <li><a href="/documentation/configuration#mapping-configuration">Mapping configuration</a>
+        <li><a href="/documentation/configuration#supported-annotations">&nbsp; &nbsp; Supported annotations</a>
+        <li><a href="/documentation/configuration#entity-id-property">&nbsp; &nbsp; Entity Id property</a>
+        <li><a href="/documentation/configuration#property-mapping-style">&nbsp; &nbsp; Property mapping style</a>
+        </li>
+        <li><a href="/documentation/configuration#repository-setup">JaversRepository setup</a></li>
+        <li><a href="/documentation/configuration#custom-json-serialization">&nbsp; &nbsp; Custom JSON
+            serialization</a>
+        <li><a href="/documentation/configuration#json-type-adapters">&nbsp; &nbsp; JSON TypeAdapters</a>
+    </ul>
+</section>
+
+<section>
+    <h2>
+        <a href="/documentation/javers-internals">JaVers internals</a>
+    </h2>
+    <ul class="list-unstyled">
+        <li><a href="/documentation/javers-internals#type-mapper">TypeMapper</a></li>
+    </ul>
+</section>
