--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,21 +1,15 @@
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="{{ page.description }}">
 <meta name="author" content="">
-
 <title>{{ page.title }}</title>
-
-<!-- Bootstrap core CSS -->
-<link href="/css/javers.css" rel="stylesheet">
+<link rel="icon" href="favicon.ico">
 <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- github style syntax highlight -->
-<link href="/css/github_pygments.css" rel="stylesheet">
-
-<!-- Custom Google Web Font -->
-<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
-      rel='stylesheet' type='text/css'>
-
-<!-- Add custom CSS here -->
-<link href="/css/landing-page.css" rel="stylesheet">
+<link href="/css/style.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Oxygen:700,400,300&amp;subset=latin,latin-ext' rel='stylesheet'
+      type='text/css'>
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
