--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<html>
 <head>
     {% include head.html %}
-    <link href="/css/documentation.css" rel="stylesheet">
 </head>
-<body data-spy="scroll" data-target=".javers-navbar">
-
+<body class="page">
 {% include menus.html %}
-<section id="documentation" class="container">
-    <div class="row">
 
-        <div class="col-md-4">
-            {% include docs-sidebar.html %}
-        </div>
-        <div class="col-md-8 javers-well">
-            {% include content.html %}
+<section>
+    <div id="content" class="container">
+        <div class="row">
+            <div id="main" class="col-md-8">
+                {{ content }}
+            </div>
+            <div id="sidebar" class="col-md-4 visible-md visible-lg">
+                {% include docs-sidebar.html %}
+            </div>
         </div>
     </div>
 </section>
+
 
 {% include footer.html %}
 </body>
