code {     background-color: white;     color: black; }

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ a:hover {
 }
 
 code {
-    background-color: #e3e3e3;
-    color: #ea4d1a;
+    background-color: white;
+    color: black;
 }
 
 .navbar-nav > li > a {
