--- a/_includes/menus.html
+++ b/_includes/menus.html
@@ -18,9 +18,18 @@
         <div id="navbar" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
                 <li {% if current[1] == 'index.html' %}class='active'{% endif %}><a href="/">Features</a></li>
-                <li {% if current[1] == 'documentation' %}class='active'{% endif %}><a href="/documentation">Documentation</a></li>
-                <li><a href="/javadoc_1.0.0/index.html">Javadoc</a></li>
+                <li {% if current[1] == 'documentation' %}class='active'{% endif %}><a href="/documentation">Documentation</a>
+                    <ul class="visible-xs">
+                        <li><a href="/documentation/">Introduction</a></li>
+                        <li><a href="/documentation/features-overview">Features overview</a></li>
+                        <li><a href="/documentation/getting-started">Getting Started</a></li>
+                        <li><a href="/documentation/diff-examples">Examples &mdash; Diff</a></li>
+                        <li><a href="/documentation/repository-examples">Examples &mdash; Repository</a></li>
+                        <li><a href="/documentation/configuration">Configuration</a></li>
+                        <li><a href="/documentation/javers-internals">JaVers internals</a></li>
+                    </ul>
                 </li>
+                <li><a href="/javadoc_1.0.0/index.html">Javadoc</a></li>
             </ul>
         </div>
     </div>
