--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body {
     font-family: 'Oxygen', sans-serif;
     padding-top: 60px;
+    position: relative;
 }
 
 a {
@@ -35,7 +36,6 @@ code {
 .navbar-javers .navbar-nav > .active > a,
 .navbar-javers .navbar-nav > .active > a:hover {
     background: none;
-
 }
 
 .navbar-javers .navbar-nav > li > a {
@@ -49,6 +49,10 @@ code {
     margin-right: 10px;
     margin-left: 10px;
     text-transform: uppercase;
+}
+
+.navbar-javers .navbar-nav > li > ul {
+    color: #fff;
 }
 
 .hero-container {
@@ -236,6 +240,10 @@ section.dark #team ul li small {
     padding-right: 12%;
 }
 
+section.dark ul#releases li {
+    line-height: 2.2em;
+}
+
 footer {
     background-color: #181d23;
     padding: 10px;
@@ -280,26 +288,24 @@ body.page section #content #main blockquote {
     padding: 20px;
     border: none;
     color: #fff;
-    margin:10px 0;
-    font-size:1.1em;
+    margin: 10px 0;
+    font-size: 1.1em;
 }
 
-body.page section #sidebar {
-    padding: 0;
-    background-color: #f0f4f7;
+#sidebar > div {
+    margin-top: 25px;
     border-left: 1px solid #dde0e2;
-    border-right: 1px solid #dde0e2;
 }
 
 body.page section #sidebar section {
     padding: 0 25px 0;
 }
 
-body.page section #sidebar section h2 a{
+body.page section #sidebar section h2 a {
     font-weight: 300;
     text-transform: uppercase;
     color: #3d79b4;
-    font-size:0.8em;
+    font-size: 0.8em;
 }
 
 body.page section #sidebar section h2 a:hover {
@@ -313,6 +319,14 @@ body.page section #sidebar section ul {
 body.page section #sidebar section ul li a {
     font-weight: 300;
     color: #000;
+    padding: 5px;
+}
+
+body.page section #sidebar section ul li a:hover {
+    background: transparent;
+    color: #ee6c21;
+    border-left: 3px solid red;
+    padding-left:2px;
 }
 
 /* Small devices (tablets, 768px and down) */
